--- a/appState.json
+++ b/appState.json
@@ -22,7 +22,7 @@
         "children": [],
         "isRemovable": true,
         "filePath": "node-test-201912/lambda.js",
-        "code": "exports.handler = function(event, context, callback) {\n\n    const https = require('https');\n\n    https.get('https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY', (resp) => {\n      let data = '';\n\n      // A chunk of data has been recieved.\n      resp.on('data', (chunk) => {\n        data += chunk;\n      });\n\n      // The whole response has been received. Print out the result.\n      resp.on('end', () => {\n        console.log(JSON.parse(data).explanation);\n      });\n\n    }).on(\"error\", (err) => {\n      console.log(\"Error: \" + err.message);\n    });\n\n    callback(null, {\"message\": \"Successfully executed\"});\n}",
+        "code": "exports.handler = function (event, context, callback) {\n    debugger;\n\n    const https = require('https');\n\n    https.get('https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY', (resp) => {\n        let data = '';\n\n        // A chunk of data has been recieved.\n        resp.on('data', (chunk) => {\n            data += chunk;\n        });\n\n        // The whole response has been received. Print out the result.\n        resp.on('end', () => {\n            console.log(JSON.parse(data).explanation);\n        });\n\n    }).on(\"error\", (err) => {\n        console.log(\"Error: \" + err.message);\n    });\n\n    callback(null, { \"message\": \"Successfully executed\" });\n}",
         "config": {
           "runtime": "nodejs10.x",
           "handler": "handler",
@@ -30,7 +30,16 @@
           "memory": 1024,
           "layers": []
         },
-        "triggers": []
+        "triggers": [],
+        "testCases": {
+          "eadb1d60-8828-493f-bd6b-a690731f94a3": {
+            "id": "eadb1d60-8828-493f-bd6b-a690731f94a3",
+            "name": "Test event",
+            "functionId": "bc7a6a38-37ca-4e6d-9318-f84dfd449c30",
+            "event": "{\n\n}",
+            "eventTemplate": "hello-world"
+          }
+        }
       }
     },
     "rootNode": "69cc3422-a2fc-4f21-a31a-30df69754ed0",
@@ -64,7 +73,7 @@
     "projectRegion": "us-west-1",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1575130504010
+    "lastSave": 1575130815795
   },
   "VCS_STATE": {
     "provider": "GitHub",
